test-harness/src/snapshots/toolchain__fnmut lint-rust.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Lint:
      linter: rust
  info:
    name: fnmut
    manifest: lint/rust/fnmut/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: true
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0
stderr = '''
Compiling fnmut v0.1.0 (WORKSPACE_ROOT/lint/rust/fnmut)
warning: [Hax] FnMut is not supported
 --> lint/rust/fnmut/src/lib.rs:8:12
  |
8 |         F: FnMut(u32) -> u8;
  |            ^^^^^

warning: [Hax] FnMut is not supported
  --> lint/rust/fnmut/src/lib.rs:16:12
   |
16 |         F: FnMut(u32) -> u8,
   |            ^^^^^

warning: trait `SomeTrait` is never used
 --> lint/rust/fnmut/src/lib.rs:5:7
  |
5 | trait SomeTrait {
  |       ^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

warning: struct `UpdatableStruct` is never constructed
  --> lint/rust/fnmut/src/lib.rs:11:8
   |
11 | struct UpdatableStruct {}
   |        ^^^^^^^^^^^^^^^

warning: `fnmut` (lib) generated 4 warnings
    Finished `dev` profile [unoptimized + debuginfo] target(s) in XXs'''
stdout = ''
