test-harness/src/snapshots/toolchain__functions into-fstar.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: fstar
  info:
    name: functions
    manifest: functions/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: false
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0

[stdout]
diagnostics = []

[stdout.files]
"Functions.fst" = '''
module Functions
#set-options "--fuel 0 --ifuel 1 --z3rlimit 15"
open Core
open FStar.Mul

let calling_function_pointer__f (#v_T: Type0) (_: Prims.unit) : Prims.unit = ()

/// Issue #757
let calling_function_pointer (_: Prims.unit) : Prims.unit =
  let ff_ptr: Prims.unit -> Prims.unit = calling_function_pointer__f in
  let _:Prims.unit = calling_function_pointer__f #i32 () in
  ()
'''
