test-harness/src/snapshots/toolchain__loops into-fstar.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: fstar
  info:
    name: loops
    manifest: loops/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: true
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0
stderr = '''
Compiling loops v0.1.0 (WORKSPACE_ROOT/loops)
    Finished `dev` profile [unoptimized + debuginfo] target(s) in XXs'''

[stdout]
diagnostics = []

[stdout.files]
"Loops.For_loops.fst" = '''
module Loops.For_loops
#set-options "--fuel 0 --ifuel 1 --z3rlimit 15"
open Core
open FStar.Mul

let bool_returning (x: u8) : bool = x <. 10uy

let chunks (#v_CHUNK_LEN: usize) (arr: Alloc.Vec.t_Vec usize Alloc.Alloc.t_Global) : usize =
  let acc:usize = sz 0 in
  let chunks:Core.Slice.Iter.t_ChunksExact usize =
    Core.Slice.impl__chunks_exact #usize
      (Core.Ops.Deref.f_deref #(Alloc.Vec.t_Vec usize Alloc.Alloc.t_Global) arr <: t_Slice usize)
      v_CHUNK_LEN
  in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Slice.Iter.t_ChunksExact
            usize)
          (Core.Clone.f_clone #(Core.Slice.Iter.t_ChunksExact usize) chunks
            <:
            Core.Slice.Iter.t_ChunksExact usize)
        <:
        Core.Slice.Iter.t_ChunksExact usize)
      acc
      (fun acc chunk ->
          let acc:usize = acc in
          let chunk:t_Slice usize = chunk in
          let mean:usize = sz 0 in
          let mean:usize =
            Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(t_Slice usize)
                  chunk
                <:
                Core.Slice.Iter.t_Iter usize)
              mean
              (fun mean item ->
                  let mean:usize = mean in
                  let item:usize = item in
                  mean +! item <: usize)
          in
          let acc:usize = acc +! (mean /! v_CHUNK_LEN <: usize) in
          acc)
  in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(t_Slice usize)
          (Core.Slice.Iter.impl_88__remainder #usize chunks <: t_Slice usize)
        <:
        Core.Slice.Iter.t_Iter usize)
      acc
      (fun acc item ->
          let acc:usize = acc in
          let item:usize = item in
          acc -! item <: usize)
  in
  acc

let composed_range (n: usize) : usize =
  let acc:usize = sz 0 in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Iter.Adapters.Chain.t_Chain
              (Core.Ops.Range.t_Range usize) (Core.Ops.Range.t_Range usize))
          (Core.Iter.Traits.Iterator.f_chain #(Core.Ops.Range.t_Range usize)
              #(Core.Ops.Range.t_Range usize)
              ({ Core.Ops.Range.f_start = sz 0; Core.Ops.Range.f_end = n }
                <:
                Core.Ops.Range.t_Range usize)
              ({
                  Core.Ops.Range.f_start = n +! sz 10 <: usize;
                  Core.Ops.Range.f_end = n +! sz 50 <: usize
                }
                <:
                Core.Ops.Range.t_Range usize)
            <:
            Core.Iter.Adapters.Chain.t_Chain (Core.Ops.Range.t_Range usize)
              (Core.Ops.Range.t_Range usize))
        <:
        Core.Iter.Adapters.Chain.t_Chain (Core.Ops.Range.t_Range usize)
          (Core.Ops.Range.t_Range usize))
      acc
      (fun acc i ->
          let acc:usize = acc in
          let i:usize = i in
          (acc +! i <: usize) +! sz 1 <: usize)
  in
  acc

let enumerate_chunks (arr: Alloc.Vec.t_Vec usize Alloc.Alloc.t_Global) : usize =
  let acc:usize = sz 0 in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Iter.Adapters.Enumerate.t_Enumerate
            (Core.Slice.Iter.t_Chunks usize))
          (Core.Iter.Traits.Iterator.f_enumerate #(Core.Slice.Iter.t_Chunks usize)
              (Core.Slice.impl__chunks #usize
                  (Core.Ops.Deref.f_deref #(Alloc.Vec.t_Vec usize Alloc.Alloc.t_Global) arr
                    <:
                    t_Slice usize)
                  (sz 4)
                <:
                Core.Slice.Iter.t_Chunks usize)
            <:
            Core.Iter.Adapters.Enumerate.t_Enumerate (Core.Slice.Iter.t_Chunks usize))
        <:
        Core.Iter.Adapters.Enumerate.t_Enumerate (Core.Slice.Iter.t_Chunks usize))
      acc
      (fun acc temp_1_ ->
          let acc:usize = acc in
          let i, chunk:(usize & t_Slice usize) = temp_1_ in
          Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Iter.Adapters.Enumerate.t_Enumerate
                  (Core.Slice.Iter.t_Iter usize))
                (Core.Iter.Traits.Iterator.f_enumerate #(Core.Slice.Iter.t_Iter usize)
                    (Core.Slice.impl__iter #usize chunk <: Core.Slice.Iter.t_Iter usize)
                  <:
                  Core.Iter.Adapters.Enumerate.t_Enumerate (Core.Slice.Iter.t_Iter usize))
              <:
              Core.Iter.Adapters.Enumerate.t_Enumerate (Core.Slice.Iter.t_Iter usize))
            acc
            (fun acc temp_1_ ->
                let acc:usize = acc in
                let j, x:(usize & usize) = temp_1_ in
                (i +! j <: usize) +! x <: usize)
          <:
          usize)
  in
  acc

let f (_: Prims.unit) : u8 =
  let acc:u8 = 0uy in
  Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Ops.Range.t_Range u8
        )
        ({ Core.Ops.Range.f_start = 1uy; Core.Ops.Range.f_end = 10uy } <: Core.Ops.Range.t_Range u8)
      <:
      Core.Ops.Range.t_Range u8)
    acc
    (fun acc i ->
        let acc:u8 = acc in
        let i:u8 = i in
        let acc:u8 = acc +! i in
        let _:bool = bool_returning i in
        acc)

let iterator (arr: Alloc.Vec.t_Vec usize Alloc.Alloc.t_Global) : usize =
  let acc:usize = sz 0 in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Slice.Iter.t_Iter
            usize)
          (Core.Slice.impl__iter #usize
              (Core.Ops.Deref.f_deref #(Alloc.Vec.t_Vec usize Alloc.Alloc.t_Global) arr
                <:
                t_Slice usize)
            <:
            Core.Slice.Iter.t_Iter usize)
        <:
        Core.Slice.Iter.t_Iter usize)
      acc
      (fun acc item ->
          let acc:usize = acc in
          let item:usize = item in
          acc +! item <: usize)
  in
  acc

let nested (arr: Alloc.Vec.t_Vec usize Alloc.Alloc.t_Global) : usize =
  let acc:usize = sz 0 in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Slice.Iter.t_Iter
            usize)
          (Core.Slice.impl__iter #usize
              (Core.Ops.Deref.f_deref #(Alloc.Vec.t_Vec usize Alloc.Alloc.t_Global) arr
                <:
                t_Slice usize)
            <:
            Core.Slice.Iter.t_Iter usize)
        <:
        Core.Slice.Iter.t_Iter usize)
      acc
      (fun acc item ->
          let acc:usize = acc in
          let item:usize = item in
          Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Iter.Adapters.Rev.t_Rev
                  (Core.Ops.Range.t_Range usize))
                (Core.Iter.Traits.Iterator.f_rev #(Core.Ops.Range.t_Range usize)
                    ({ Core.Ops.Range.f_start = sz 0; Core.Ops.Range.f_end = item }
                      <:
                      Core.Ops.Range.t_Range usize)
                  <:
                  Core.Iter.Adapters.Rev.t_Rev (Core.Ops.Range.t_Range usize))
              <:
              Core.Iter.Adapters.Rev.t_Rev (Core.Ops.Range.t_Range usize))
            acc
            (fun acc i ->
                let acc:usize = acc in
                let i:usize = i in
                let acc:usize = acc +! sz 1 in
                Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Iter.Adapters.Zip.t_Zip
                          (Core.Slice.Iter.t_Iter usize) (Core.Ops.Range.t_Range usize))
                      (Core.Iter.Traits.Iterator.f_zip #(Core.Slice.Iter.t_Iter usize)
                          #(Core.Ops.Range.t_Range usize)
                          (Core.Slice.impl__iter #usize
                              (Core.Ops.Deref.f_deref #(Alloc.Vec.t_Vec usize Alloc.Alloc.t_Global)
                                  arr
                                <:
                                t_Slice usize)
                            <:
                            Core.Slice.Iter.t_Iter usize)
                          ({ Core.Ops.Range.f_start = sz 4; Core.Ops.Range.f_end = i }
                            <:
                            Core.Ops.Range.t_Range usize)
                        <:
                        Core.Iter.Adapters.Zip.t_Zip (Core.Slice.Iter.t_Iter usize)
                          (Core.Ops.Range.t_Range usize))
                    <:
                    Core.Iter.Adapters.Zip.t_Zip (Core.Slice.Iter.t_Iter usize)
                      (Core.Ops.Range.t_Range usize))
                  acc
                  (fun acc j ->
                      let acc:usize = acc in
                      let j:(usize & usize) = j in
                      (((acc +! item <: usize) +! i <: usize) +! j._1 <: usize) +! j._2 <: usize))
          <:
          usize)
  in
  acc

let pattern (arr: Alloc.Vec.t_Vec (usize & usize) Alloc.Alloc.t_Global) : usize =
  let acc:usize = sz 0 in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Alloc.Vec.t_Vec
              (usize & usize) Alloc.Alloc.t_Global)
          arr
        <:
        Alloc.Vec.Into_iter.t_IntoIter (usize & usize) Alloc.Alloc.t_Global)
      acc
      (fun acc temp_1_ ->
          let acc:usize = acc in
          let x, y:(usize & usize) = temp_1_ in
          acc +! (x *! y <: usize) <: usize)
  in
  acc

let range1 (_: Prims.unit) : usize =
  let acc:usize = sz 0 in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Ops.Range.t_Range
            usize)
          ({ Core.Ops.Range.f_start = sz 0; Core.Ops.Range.f_end = sz 15 }
            <:
            Core.Ops.Range.t_Range usize)
        <:
        Core.Ops.Range.t_Range usize)
      acc
      (fun acc i ->
          let acc:usize = acc in
          let i:usize = i in
          acc +! i <: usize)
  in
  acc

let range2 (n: usize) : usize =
  let acc:usize = sz 0 in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Ops.Range.t_Range
            usize)
          ({ Core.Ops.Range.f_start = sz 0; Core.Ops.Range.f_end = n +! sz 10 <: usize }
            <:
            Core.Ops.Range.t_Range usize)
        <:
        Core.Ops.Range.t_Range usize)
      acc
      (fun acc i ->
          let acc:usize = acc in
          let i:usize = i in
          (acc +! i <: usize) +! sz 1 <: usize)
  in
  acc

let rev_range (n: usize) : usize =
  let acc:usize = sz 0 in
  let acc:usize =
    Core.Iter.Traits.Iterator.f_fold (Core.Iter.Traits.Collect.f_into_iter #(Core.Iter.Adapters.Rev.t_Rev
            (Core.Ops.Range.t_Range usize))
          (Core.Iter.Traits.Iterator.f_rev #(Core.Ops.Range.t_Range usize)
              ({ Core.Ops.Range.f_start = sz 0; Core.Ops.Range.f_end = n }
                <:
                Core.Ops.Range.t_Range usize)
            <:
            Core.Iter.Adapters.Rev.t_Rev (Core.Ops.Range.t_Range usize))
        <:
        Core.Iter.Adapters.Rev.t_Rev (Core.Ops.Range.t_Range usize))
      acc
      (fun acc i ->
          let acc:usize = acc in
          let i:usize = i in
          (acc +! i <: usize) +! sz 1 <: usize)
  in
  acc
'''
"Loops.While_loops.fst" = '''
module Loops.While_loops
#set-options "--fuel 0 --ifuel 1 --z3rlimit 15"
open Core
open FStar.Mul

let f (_: Prims.unit) : u8 =
  let x:u8 = 0uy in
  let x:u8 =
    Rust_primitives.f_while_loop (fun x ->
          let x:u8 = x in
          x <. 10uy <: bool)
      x
      (fun x ->
          let x:u8 = x in
          let x:u8 = x +! 3uy in
          x)
  in
  x +! 12uy
'''
